[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# We add cdylib and rlib to tell rust
# it needs to build for WebAssembly and Rust
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# wasm-bindgen builds the JavaScript bindings
# Take a look at the following link for more info:
# https://rustwasm.github.io/docs/wasm-bindgen/
wasm-bindgen = { version = "0", features = ["serde-serialize"] }
# This dependency is required to build the wasm module
js-sys = "0"
# Used to serialize objects to JSON
serde = { version = "1.0.199", features = ["derive"] }
# Used to serialize objects from JSON
serde_json = "1.0.116"
